--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
       <div class="header-left-side">
         <h1>
-          Adham <br />
-          Hoffman
+          Nenavath <br />
+          Anusha
         </h1>
         <h2>- UI / UX DESIGNER</h2>
         <p>
@@ -31,7 +31,7 @@
         <button>instagram</button> <br />
         <br />
         <button class="btn">Hire now</button>
-        <h3>Copyright © 2023 Adham Hoffman - UI/X Designer</h3>
+        <h3>Copyright © 2023 Nenavath Anusha - UI/X Designer</h3>
       </div>
       <div class="header-right-side">
         <img src="portfolio-images/adham-hoffman.jpg" alt="img" />
